--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
     </div>
   </section>
 
-  <section id="contact" class="contact-us">
+  <section id="contact">
     <div class="container">
       <div class="title">
         <span>CONTACT</span>
